name: dimensions
version: 0.1.0.0
cabal-version: >=2.0
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Safe type-level dimensionality for multidimensional data
description:
    Safe type-level dimensionality for multidimensional data.
category: Math, Geometry
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/easytensor.git
    subdir: dimensions


library

    exposed-modules:
        Numeric.Dimensions
        Numeric.Dimensions.Inference
        Numeric.TypeLits
    build-depends:
        base >=4.9 && <5,
        ghc >= 8.2.0,
        ghc-prim >= 0.5
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Numeric.Dimensions.List
        Numeric.Dimensions.Type
        Numeric.Dimensions.Dim
        Numeric.Dimensions.Idx
        Numeric.Dimensions.Traverse
    ghc-options: -Wall -fwarn-tabs


test-suite dimensions-test

    type: detailed-0.9
    test-module: Spec
    other-modules:
        Numeric.Dimensions.ListTest
    build-depends:
        base -any,
        Cabal >=2.0,
        QuickCheck -any,
        dimensions -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
