name: dimensions
version: 0.3.2.0
cabal-version: >=1.20
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Safe type-level dimensionality for multidimensional data.
description:
    Safe type-level dimensionality for multidimensional data.
category: Math, Geometry
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/easytensor.git
    subdir: dimensions


library

    exposed-modules:
        Numeric.Dimensions
        Numeric.Dimensions.Dim
        Numeric.Dimensions.XDim
        Numeric.Dimensions.Idx
        Numeric.Dimensions.List
        Numeric.Dimensions.Traverse
        Numeric.Dimensions.Traverse.IO
        Numeric.Dimensions.Traverse.ST
        Numeric.TypeLits
    build-depends:
        base >=4.9 && <5,
        ghc-prim >= 0.5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs -O2


test-suite dimensions-test

    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Numeric.Dimensions.ListTest
    build-depends:
        base -any,
        Cabal >=1.20,
        QuickCheck -any,
        dimensions -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall -fwarn-tabs -O2
