name: dimensions
version: 1.0.1.1
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Safe type-level dimensionality for multidimensional data.
description:
    Safe type-level dimensionality for multidimensional data.
category: Math, Geometry
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/easytensor.git
    subdir: dimensions


flag unsafeindices
    description:
        Disable bound checks on Idx and Idxs types.
    default: False


library

    if flag(unsafeindices)
        cpp-options: -DUNSAFE_INDICES
    exposed-modules:
        Numeric.Dim
        Numeric.Tuple
        Numeric.Tuple.Lazy
        Numeric.Tuple.Strict
        Numeric.Type.Evidence
        Numeric.Type.List
        Numeric.TypedList
        Numeric.Dimensions
        Numeric.Dimensions.Dims
        Numeric.Dimensions.Idxs
        Numeric.Dimensions.Fold
    build-depends:
        base >=4.9 && <5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall


test-suite dimensions-test

    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Numeric.DimTest
        Numeric.Dimensions.DimsTest
    build-depends:
        base -any,
        Cabal -any,
        QuickCheck -any,
        dimensions -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall
