name: easytensor-opencv
version: 0.2.0.0
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Easytensor compatibility with opencv.
description:
    Instances and functions for conversion between easytensor's DataFrame
    and opencv's Mat types.
category: Math, Geometry, Graphics
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/easytensor.git
    subdir: easytensor-opencv


library

    exposed-modules:
        OpenCV.Core.Types.Mat.DataFrame
    build-depends:
        base >=4.10 && <5,
        dimensions >=1.0.1,
        easytensor >=1,
        opencv >=0.0.2.1,
        inline-c -any,
        inline-c-cpp -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O2
    pkgconfig-depends: opencv
