name: easytensor-vulkan
version: 1.0.1.0
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Use easytensor with vulkan-api
description:
    Use easytensor DataFrame types with vulkan-api.
    This package provides an orphan instance of PrimBytes for Vulkan structures,
    so they can be used as elements of DataFrames.
    In addition, it provides a few helper functions for working with array-like
    structures.
category: geometry, vulkan, bsd3, graphics, library, opengl
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/easytensor.git
    subdir: easytensor-vulkan


library

    exposed-modules:
        Graphics.Vulkan.Marshal.Create.DataFrame
    build-depends:
        base >=4.10 && <5,
        dimensions >=1,
        easytensor >=1,
        vulkan-api >=1.1.3.1
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
