name: etest
version: 1.0.2.0
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Pure, type-indexed haskell vector, matrix, and tensor library.
description:
    Pure, type-indexed haskell vector, matrix, and tensor library.
    Features dimensionality type-checking for all operations.
    Generic n-dimensional versions are implemented using low-level prim ops.
    Allows ad-hoc replacement with fixed low-dimensionality vectors and matrices without changing user interface.
category: Math, Geometry
author: Artem Chirkin


library

    exposed-modules:
        Numeric.DataFrame.Type
        Numeric.DataFrame.Internal.Array.Family
        Numeric.DataFrame.TcPlugin
    build-depends:
        base >=4.10 && <5,
        dimensions >=1.0.2.0,
        ghc >=7.10,
        ghc-tcplugins-extra >=0.2.1

    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fprint-explicit-kinds

executable etest

    main-is: Main.hs
    build-depends:
        base -any,
        etest -any,
        dimensions -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -O2 -fprint-explicit-kinds -fprint-potential-instances
