name: etest
version: 1.0.2.0
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: chirkin@arch.ethz.ch
homepage: https://github.com/achirkin/easytensor#readme
synopsis: Experiment with class deriving using GHC plugins
description:
    An absolutely amazing experiment with class deriving for
    newtypes over closed type families using typechecker and core plugins.
category: Math, Geometry
author: Artem Chirkin


library

    exposed-modules:
        Numeric.DataFrame.Type
        Numeric.DataFrame.DFBackend
        Numeric.DataFrame.Internal.Array.Family
        Numeric.DataFrame.TcPlugin
    build-depends:
        base >=4.10 && <5,
        dimensions >=1.0.2.0,
        ghc >=8.0.2

    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fprint-explicit-kinds

executable etest

    main-is: Main.hs
    build-depends:
        base -any,
        etest -any,
        dimensions -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -O2 -fprint-explicit-kinds -fprint-potential-instances
